Update README & AUTHORS

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
 # Striving Authors
 
-Usman Sayedi Aliyu <usmanmurabi@gmail.com>
+Aliyu <usmanmurabi@gmail.com>
+Sayedi <ademolaadebola161@gmail.com>
